--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">20240529</string>
+    <string name="title_activity_video">VideoActivity</string>
 </resources>
